# create

./: Cargo.toml  todo.txt
peppaint/: Cargo.toml
peppaint/src/: constants.rs  lib.rs  macros.rs  traits.rs  types.rs
peppaint/src/funcs/: helpers.rs
peppaint/src/movie/: actor.rs  camera.rs  context.rs  mod.rs  movie.rs
peppaint/src/pepgl/: buffer.rs  mesh.rs  mod.rs  model.rs  shader.rs  texture.rs  vao.rs  vertex.rs  window.rs
peppaint/src/render/: mod.rs  painter.rs  painter_depricated.rs  transform_stack_2d.rs
peppaint/src/std/: mod.rs  vertices.rs
peppaint/src/std/shaders/: mod.rs  painting.vert  painting_depric.frag  painting_depric.vert  pos_color.frag  pos_color.vert
playground/: Cargo.toml
playground/src/: main.rs  routes.rs
playground/src/actors/: cameras.rs  closed_tunnel.rs  mod.rs  ring_tunnel.rs  spiral_web.rs  strobo_square.rs
playground/src/assets/: .Shelby.obj.icloud  .rose.obj.icloud
playground/src/assets/rose/Models and Textures/: .rose.fbx.icloud  .rose.mb.icloud  .wildtextures-leather-Campo-rose.jpg.icloud
playground/src/movielib/: mod.rs  spiral_thing.rs  square_adjuster.rs  tunnel_simulator.rs
playground/src/shaders/: ringtunnel.vert  texture.frag  texture.vert
