[package]
name = "create"
version = "0.1.0"
authors = ["pvdklei"]
edition = "2018"
license = "MIT"
description = "(Reserved) A library for creative graphics and more!"
repository = "https://github.com/pvdklei/create"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
