[package]
name = "peppaint"
version = "0.1.0"
authors = ["Pepijn van der Klei <pepijnvanderklei@hotmail.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.39.0"
gl = "0.14.0"
perlin_noise = "1.0.1"
rand = "0.7.3"
lazy_static = "1.4.0"
image = "0.23.10"
nalgebra-glm = "0.9.0"
tobj = "0.1.4"
