[package]
name = "playground"
version = "0.1.0"
authors = ["pvdklei"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peppaint = { path = "../peppaint" }
perlin_noise = "1.0.1"
rand = "0.7.3"
gl = "0.14.0"
tobj = "0.1.4"
nalgebra-glm = "0.9.0"